[gd_scene load_steps=29 format=3 uid="uid://d0rlssnvit7w4"]

[ext_resource type="Script" path="res://src/map/map_player/map_player.gd" id="1_g3ols"]
[ext_resource type="Texture2D" uid="uid://cb1ud4vqk0bd5" path="res://assets/ui/map/player_glow.png" id="2_dt38u"]
[ext_resource type="Texture2D" uid="uid://y5bp2r1vi77u" path="res://assets/ui/map/player.png" id="2_x6q2x"]
[ext_resource type="Texture2D" uid="uid://d1ogmure04xwi" path="res://assets/ui/map/ring1.png" id="3_ixl3o"]
[ext_resource type="Texture2D" uid="uid://2idgorc23fon" path="res://assets/ui/map/travel_line_texture.png" id="4_dgis1"]
[ext_resource type="Texture2D" uid="uid://vr33qlvb418f" path="res://assets/ui/map/ring5.png" id="4_rs5vh"]
[ext_resource type="FontFile" uid="uid://c3dptkqdore24" path="res://assets/ui/fonts/SourceCodePro-VariableFont_wght.ttf" id="5_57n47"]
[ext_resource type="Script" path="res://src/abstract_base_classes/gravitized_component.gd" id="6_jc7tl"]
[ext_resource type="Texture2D" uid="uid://du32wpl6hkaff" path="res://assets/mvp4_assets/map_temp.png" id="7_2q3vc"]
[ext_resource type="Texture2D" uid="uid://cl1p7ygvq4qg" path="res://assets/mvp3_assets/screenpuzzle/text_backer.png" id="10_77bw0"]
[ext_resource type="FontFile" uid="uid://cjmlvobt18yan" path="res://assets/ui/fonts/SourceCodePro-Italic-VariableFont_wght.ttf" id="10_qxwoe"]

[sub_resource type="Gradient" id="Gradient_i3lws"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_a7q01"]
blend_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_rmnfs"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qgkvp"]
radius = 808.557

[sub_resource type="FontVariation" id="FontVariation_r8fn4"]
base_font = ExtResource("5_57n47")
variation_embolden = 0.76

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_snf2b"]
blend_mode = 1

[sub_resource type="FontVariation" id="FontVariation_o7465"]
base_font = ExtResource("5_57n47")
variation_embolden = 2.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_bg83i"]

[sub_resource type="FontVariation" id="FontVariation_q6uck"]
base_font = ExtResource("5_57n47")
variation_embolden = 0.87

[sub_resource type="FontVariation" id="FontVariation_whvip"]
base_font = ExtResource("5_57n47")
variation_embolden = 2.0

[sub_resource type="FontVariation" id="FontVariation_j0s38"]
base_font = ExtResource("10_qxwoe")
variation_embolden = 0.87

[sub_resource type="FontVariation" id="FontVariation_mjnts"]
base_font = ExtResource("10_qxwoe")
variation_embolden = 1.85

[sub_resource type="CircleShape2D" id="CircleShape2D_r58ii"]
radius = 31.0161

[sub_resource type="Animation" id="Animation_8n5iw"]
resource_name = "hit_hazard"
length = 7.0
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/WarningLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6, 6.5, 7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0.745098), Color(1, 1, 1, 0), Color(1, 1, 1, 0.458824), Color(1, 1, 1, 0), Color(1, 1, 1, 0.145098), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/WarningLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/WarningLabel:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["IMPACT AVOIDED"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/WarningLabel:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.50005, 0.374388, 1)]
}

[sub_resource type="Animation" id="Animation_vn8l2"]
resource_name = "neutral"
length = 0.1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/WarningLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/WarningLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_0vk47"]
resource_name = "hitting_hazard"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/WarningLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/WarningLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/WarningLabel:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.1, 1.15, 1.25, 1.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": ["WARNING: COLLISION IMMINENT", "WARNING: COLLISION IMMINENT
WARNING: COLLISION IMMINENT
WARNING: COLLISION IMMINENT", "WARNING: COLLISION IMMINENT WARNING: COLLISION IMMINENT WARNING: COLLISION IMMINENT WARNING: COLLISION IMMINENT WARNING: COLLISION IMMINENT", "WARNING: COLLISION IMMINENT WARNING: COLLISION IMMINENT WARNING: COLLISION IMMINENT WARNING: COLLISION IMMINENT WARNING: COLLISION IMMINENT WARNING: COLLISION IMMINENT WARNING: COLLISION IMMINENT", "WARNING: COLLISION IMMINENT WARNING: COLLISION IMMINENT WARNING: COLLISION IMMINENT WARNING: COLLISION IMMINENT WARNING: COLLISION IMMINENT WARNING: COLLISION IMMINENT WARNING: COLLISION IMMINENT WARNING: COLLISION IMMINENT WARNING: COLLISION IMMINENT"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/WarningLabel:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.50005, 0.374388, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_326t4"]
_data = {
"hit_hazard": SubResource("Animation_8n5iw"),
"hitting_hazard": SubResource("Animation_0vk47"),
"neutral": SubResource("Animation_vn8l2")
}

[node name="MapPlayer" type="Node2D"]
z_index = 1
script = ExtResource("1_g3ols")

[node name="PlayerGlow" type="Sprite2D" parent="."]
position = Vector2(-15, 2)
texture = ExtResource("2_dt38u")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.691736, 0.691736)
texture = ExtResource("2_x6q2x")

[node name="Line2D" type="Line2D" parent="."]
z_index = -1
scale = Vector2(0.25, 0.25)
points = PackedVector2Array(0, 0)
width = 86.17
gradient = SubResource("Gradient_i3lws")
texture = ExtResource("4_dgis1")
texture_mode = 2

[node name="Ring1" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.466667)
material = SubResource("CanvasItemMaterial_a7q01")
scale = Vector2(0.9, 0.9)
texture = ExtResource("3_ixl3o")

[node name="Ring5" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.466667)
material = SubResource("CanvasItemMaterial_a7q01")
texture = ExtResource("4_rs5vh")

[node name="PlayerBody" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBody"]
shape = SubResource("CircleShape2D_rmnfs")

[node name="ScanArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScanArea"]
visible = false
shape = SubResource("CircleShape2D_qgkvp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0
scale = Vector2(0.5, 0.5)
transform = Transform2D(0.5, 0, 0, 0.5, 0, 0)

[node name="MapTemp" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(961, 529)
texture = ExtResource("7_2q3vc")

[node name="Energy" type="ProgressBar" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0.878431)
offset_left = 542.003
offset_top = 1688.0
offset_right = 678.003
offset_bottom = 2377.0
rotation = 3.14159
scale = Vector2(2, 2)
mouse_filter = 2
value = 100.0
fill_mode = 2
show_percentage = false

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 273.003
offset_top = 1685.0
offset_right = 2022.0
offset_bottom = 2594.0
scale = Vector2(0.264077, 0.264077)
mouse_filter = 2
theme_override_colors/default_color = Color(1, 1, 1, 0.505882)
theme_override_fonts/normal_font = SubResource("FontVariation_r8fn4")
theme_override_font_sizes/normal_font_size = 334
text = "POWER"

[node name="WarningLabel" type="Label" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0.5)
self_modulate = Color(1, 0.50005, 0.374388, 1)
material = SubResource("CanvasItemMaterial_snf2b")
offset_left = 2.0
offset_top = -4.0
offset_right = 1924.0
offset_bottom = 1081.0
scale = Vector2(1.9929, 1.9929)
theme_override_fonts/font = SubResource("FontVariation_o7465")
theme_override_font_sizes/font_size = 100
text = "IMPACT AVOIDED"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="TextBacker" type="TextureRect" parent="CanvasLayer"]
visible = false
modulate = Color(0.612036, 0.612036, 0.612036, 1)
material = SubResource("CanvasItemMaterial_bg83i")
offset_left = 2554.0
offset_top = 346.0
offset_right = 3714.0
offset_bottom = 1761.0
texture = ExtResource("10_77bw0")

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/TextBacker"]
layout_mode = 2
offset_top = -7.0
offset_right = 1160.0
offset_bottom = 1427.0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/TextBacker/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 110
theme_override_constants/margin_top = 115
theme_override_constants/margin_right = 110

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/TextBacker/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = SubResource("FontVariation_q6uck")
theme_override_fonts/bold_font = SubResource("FontVariation_whvip")
theme_override_fonts/italics_font = SubResource("FontVariation_j0s38")
theme_override_fonts/bold_italics_font = SubResource("FontVariation_mjnts")
theme_override_font_sizes/normal_font_size = 50
theme_override_font_sizes/bold_font_size = 50
theme_override_font_sizes/italics_font_size = 50
theme_override_font_sizes/bold_italics_font_size = 50
theme_override_font_sizes/mono_font_size = 50
bbcode_enabled = true
text = "[center][b]LOCATION DETAILS[/b]

-bla bla bla


bla bla bla bla


read this later"
shortcut_keys_enabled = false

[node name="GravityDetector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="GravityDetector"]
shape = SubResource("CircleShape2D_r58ii")

[node name="GravitizedComponent" type="Node2D" parent="." node_paths=PackedStringArray("gravity_detector")]
script = ExtResource("6_jc7tl")
gravity_detector = NodePath("../GravityDetector")

[node name="MapAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_326t4")
}
autoplay = "neutral"

[connection signal="area_entered" from="ScanArea" to="." method="_area_scanned"]
